# planner-app

./: .env  .gitignore  .prettierrc  README.md  build-fix.bash  eslint.config.mjs  next.config.mjs  next.config.mts  next.config.ts  package.json  prettier.config.mts  tauri-fix.bash  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/calendar/: page.tsx
src/app/category/: page.tsx
src/app/tasks/: page.tsx
src/components/: get-initial-data.tsx
src/components/calendar/: calendar.tsx
src/components/create-event-form/: create-event-form.tsx
src/components/day-events/: day-events.tsx
src/components/event-details/: event-details.tsx
src/components/side-bar/: side-bar.tsx
src/components/tasks/: tasks.tsx
src/components/tasks-page/: add-task-button.tsx  task-item.tsx  task-list.tsx
src/hooks/: useYear.tsx
src/stores/: events-store.ts  tasks-store.ts
src/types/: types.ts
src/ui/: arrow-left-icon.tsx  arrow-right-icon.tsx  button.tsx  calendar-icon.tsx  checkbox.tsx  clock-icon.tsx  close-icon.tsx  cross-icon.tsx  delete-icon.tsx  edit-icon.tsx  input.tsx  more-icon.tsx
src/utils/: consts.ts
src/utils/funcs/: check-table.ts  formatDateToLocalString.ts  formatFormDataEvent.ts  fromInputToNumberTime.ts  fromNumberToInputTime.ts
src/utils/providers/: events-store-provider.tsx  provider.tsx  tasks-store-provider.tsx  view-store-provider.tsx
src/utils/stores/: view-store.ts
(+16 files in other folders)
